# CliniArg

./: CMakeLists.txt  CliniParser.hpp  Expected.hpp  Properties.hpp  README.md  Resource.hpp  Settings.hpp  Singleton.hpp  proofofconcept.cpp  trimandlower.hpp
src/: CliniParser.hpp  Expected.hpp  Singleton.hpp  TrimLower.hpp
test/: FileReading.cpp  KeyValuePair.cpp  SingleValueParsing.cpp  Singleton.cpp  TestKeyValuePair.cpp  TestTrim.cpp  Trim.cpp  VectorParsing.cpp  test-file.ini
